Fix scrollbar; automatic scrolling; remove comments in backend

--- a/src/frontend/src/styles.css
+++ b/src/frontend/src/styles.css
@@ -5,26 +5,37 @@
 @import "tailwindcss";
 
 @theme {
-    --color-primary: #84ad28;
-    --color-secondary: #004d93;
+  --color-primary: #84ad28;
+  --color-secondary: #004d93;
 
-    /* Optional: Define shades if needed for hover/focus states */
-    /* --color-primary-light: ...; */
-    /* --color-primary-dark: ...; */
+  /* Optional: Define shades if needed for hover/focus states */
+  /* --color-primary-light: ...; */
+  /* --color-primary-dark: ...; */
 }
 
 /* You can add global styles to this file, and also import other style files */
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .mat-icon {
-    width: 10rem !important;
-    height: 5rem !important;
-    font-size: 7.5rem !important;
+  width: 10rem !important;
+  height: 5rem !important;
+  font-size: 7.5rem !important;
+}
+
+@layer components {
+  .swiper-scrollbar {
+    @apply bg-gray-200 h-1.5 rounded-full;
+  }
+
+  .swiper-scrollbar-drag {
+    @apply bg-primary;
+  }
 }
